--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to AJAX Practice Tasks</title>
-    <script src="src/index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./css/practice.css">
+    <!-- <script src="src/index.js" charset="utf-8"></script> -->
+    <script src="src/practice.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Dog CEO</h1>
